# crystal-picnic

./: CMakeLists.txt  README.txt
android-studio/: .gitignore
android-studio/app/: build.gradle
android-studio/app/src/androidTest/java/ca/nooskewl/crystalpicnic/: ExampleInstrumentedTest.java
android-studio/app/src/main/: AndroidManifest.xml
android-studio/app/src/main/java/: Key.java
android-studio/app/src/main/java/com/nooskewl/cp/: CPActivity.java  License_Viewer_Activity.java  MyBroadcastReceiver.java
android-studio/app/src/test/java/ca/nooskewl/crystalpicnic/: ExampleUnitTest.java
android-studio/gradle/wrapper/: gradle-wrapper.properties
android-studio/ndk-build-project/: project.properties
apple/ios/Crystal Picnic/: Crystal Picnic Unleashed-Info.plist  Crystal Picnic-Info.plist
apple/ios/Crystal Picnic.xcodeproj/: project.pbxproj
apple/ios/Crystal Picnic/CrystalPicnic.xcassets/AppIcon-1.appiconset/: Contents.json
apple/ios/Crystal Picnic/Unleashed.xcassets/AppIcon.appiconset/: Contents.json
apple/ios/Crystal Picnic/Unleashed.xcassets/LaunchImage.launchimage/: Contents.json
apple/mac/: Crystal Picnic copy-Info.plist  Crystal Picnic copy2-Info.plist  Crystal Picnic copy3-Info.plist
apple/mac/Crystal Picnic.xcodeproj/: project.pbxproj
data/areas/meeting.area/: script.lua
data/areas/stonecrater2.area/: script.lua
data/areas/stonecrater5.area/: script.lua
data/text/: English.utf8  French.utf8  German.utf8  Korean.utf8
docs/: 3rd_party.html  3rd_party.txt
docs/store_pages/: en.txt  fr.txt  ko.txt  short_de.txt  short_en.txt  short_fr.txt  short_ko.txt
include/: apple.h  config.h  engine.h  general.h  settings_loop.h  steamworks.h  video_config_loop.h  widgets.h
misc/steam/mac/scripts/: depot-cp.vdf
misc/steam/windows/: run_build_cp.bat
origdata/text/: 415890_loc_english.vdf  415890_loc_french.vdf  415890_loc_german.vdf  cpabout.en.txt  cpabout.fr.txt
src/: android.cpp  animation.cpp  animation_set.cpp  apple.M  area_loop.cpp  astar_character_role.cpp  audio_config_loop.cpp  bass.cpp  battle_ai.cpp  battle_entity.cpp  battle_loop.cpp  battle_transition_in.cpp  bones.cpp  camera.cpp  character_map_entity.cpp  collidable.cpp  config.cpp  cpa.cpp  credits_loop.cpp  crystal_loop.cpp  crystalpicnic.cpp  difficulty_loop.cpp  dirty.cpp  enemy_avatar.cpp  enemy_avatar_wander_character_role.cpp  engine.cpp  follow_character_role.cpp  game_specific_globals.cpp  general.cpp  graphics.cpp  input_config_loop.cpp  language_config_loop.cpp  lua.cpp  main.cpp  main_menu_loop.cpp  map_loop.cpp  music.cpp  npc.cpp  particle.cpp  player.cpp  (+15 more)
tools/: CMakeLists.txt
tools/android/: sign.bat  sign.sh
tools/cpa/: mkcpa-unix.sh
